<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F5F5F5"
        android:orientation="vertical"
        android:paddingBottom="40dp">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingTop="30dp"
            android:elevation="4dp"
            app:title="Expense Tracker"
            app:titleTextColor="@android:color/white"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


        <!-- Today & Month Cards -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvToday"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/red_button_bg"
                android:gravity="center"
                android:text="@string/label_today"
                android:textColor="@color/textColorWhite"
                android:textSize="@dimen/text_size_card"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvMonth"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/red_button_bg"
                android:gravity="center"
                android:text="@string/label_month_total"
                android:textColor="@color/textColorWhite"
                android:textSize="@dimen/text_size_card"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Add Expense Button -->
        <Button
            android:id="@+id/btnAddExpense"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/button_add_expense"
            android:textColor="@color/textColorWhite"
            android:textSize="@dimen/text_size_button"
            android:textStyle="bold" />

        <!-- Date -->
        <TextView
            android:id="@+id/tvDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_date"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/edittext_bg"
            android:clickable="true"
            android:drawableEnd="@drawable/calendar"
            android:drawablePadding="10dp"
            android:focusable="false"
            android:hint="@string/hint_select_date"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorHint"
            android:textSize="@dimen/text_size_label"
            android:padding="12dp" />

        <!-- Category -->
        <TextView
            android:id="@+id/tvCategoryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_category"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etCategory"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/edittext_bg"
            android:clickable="true"
            android:drawableEnd="@drawable/category"
            android:drawablePadding="10dp"
            android:focusable="false"
            android:hint="@string/hint_choose_category"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorHint"
            android:textSize="@dimen/text_size_label"
            android:padding="12dp" />

        <!-- Amount -->
        <TextView
            android:id="@+id/tvAmountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_amount"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/hint_enter_amount"
            android:inputType="numberDecimal"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorHint"
            android:textSize="@dimen/text_size_label"
            android:padding="12dp" />

        <!-- Description -->
        <TextView
            android:id="@+id/tvDescLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_description"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etDesc"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/hint_enter_desc"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorHint"
            android:textSize="@dimen/text_size_label"
            android:padding="12dp" />

        <!-- Submit Button -->
        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center"
            android:stateListAnimator="@null"
            android:text="@string/button_submit"
            android:textColor="@color/textColorWhite"
            android:textSize="@dimen/text_size_button"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
